# meshtastic-prometheus-exporter

./: .env.example  .gitignore  Dockerfile  README.md  SUPPORTED_METRICS.md  VERSION_MESHTASTIC  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.github/: dependabot.yml  release.yml
.github/workflows/: trunk-cd.yml  trunk-ci.yml  trunk.yml
docker/: prometheus.yml
docker/grafana/provisioning/dashboards/: meshtastic.yml
docker/grafana/provisioning/datasources/: prometheus.yml
grafana-dashboards/: neighbor-info-net.json  neighbor-info-nodes.json  neighbor-info.json  neighbour-info.json  packets-net.json  packets-nodes.json  packets.json  telemetry-net.json  telemetry-nodes.json
src/meshtastic_prometheus_exporter/: __about__.py  __init__.py  __main__.py  metrics.py  neighborinfo.py  nodeinfo.py  telemetry.py  util.py
tests/: test_neighborinfo.py  test_nodeinfo.py  test_telemetry.py
