[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meshtastic-prometheus-exporter"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Artiom Mocrenco", email = "artiom.mocrenco@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "opentelemetry-api==1.34.1",
  "opentelemetry-exporter-prometheus==0.55b1",
  "opentelemetry-sdk==1.34.1",
  "paho-mqtt==2.1.0",
  "cachetools==6.1.0",
  "meshtastic==2.6.4",
  "Pypubsub==4.0.3",
  "sentry-sdk==2.30.0",
]

[project.urls]
Documentation = "https://github.com/Artiom Mocrenco/meshtastic-prometheus-exporter#readme"
Issues = "https://github.com/Artiom Mocrenco/meshtastic-prometheus-exporter/issues"
Source = "https://github.com/Artiom Mocrenco/meshtastic-prometheus-exporter"

[tool.hatch.version]
path = "src/meshtastic_prometheus_exporter/__about__.py"

[project.scripts]
meshtastic-prometheus-exporter = "meshtastic_prometheus_exporter.__main__:main"

[tool.coverage.run]
source_pkgs = ["meshtastic_prometheus_exporter", "tests"]
branch = true
parallel = true
omit = [
  "src/meshtastic_prometheus_exporter/__about__.py",
]

[tool.coverage.paths]
meshtastic_prometheus_exporter = ["src/meshtastic_prometheus_exporter", "*/meshtastic-prometheus-exporter/src/meshtastic_prometheus_exporter"]
tests = ["tests", "*/meshtastic-prometheus-exporter/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.pytest.ini_options]
pythonpath = [
  ".", "src"
]

[tool.hatch.envs.hatch-test.scripts]
run = "pytest{env:HATCH_TEST_ARGS:} {args}"
run-cov = "coverage run -m pytest{env:HATCH_TEST_ARGS:} {args}"
cov-combine = "coverage combine"
cov-report = "coverage html"